--- a/gameTest.ipynb
+++ b/gameTest.ipynb
@@ -77,9 +77,9 @@
    ],
    "source": [
     "import importlib\n",
-    "import apps.logic.game as sabo\n",
-    "import apps.logic.board as board\n",
-    "from apps.logic.card import Card\n",
+    "import apps.game as sabo\n",
+    "import apps.board as board\n",
+    "from apps.card import Card\n",
     "def show_hand():\n",
     "    print(f\"current player : {game.currentPlayer} {game.players[game.currentPlayer].limit}\")\n",
     "    for index,i in enumerate(game.players[game.currentPlayer].hand):\n",
